--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,6 @@
         <div class="gradient-orb orb-1"></div>
         <div class="gradient-orb orb-2"></div>
         <div class="gradient-orb orb-3"></div>
-        <!-- <div class="gradient-orb orb-4"></div> Removed as it was not in original CSS -->
         <div class="floating-particles">
             <div class="particle"></div>
             <div class="particle"></div>
@@ -216,7 +215,7 @@
             <div class="header-right">
                 <div class="notification-bell clickable">
                     <i class="fas fa-bell"></i>
-                    <span class="notification-badge">2</span>
+                    <span class="notification-badge" id="notification-count">0</span>
                     <div class="notification-pulse"></div>
                 </div>
                 <div class="user-profile clickable" id="profile-dropdown-trigger">
@@ -261,6 +260,13 @@
                         <a href="#dashboard" data-page="dashboard" class="clickable">
                             <i class="fas fa-home"></i>
                             <span>ပင်မစာမျက်နှာ</span>
+                            <div class="nav-indicator"></div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#announcements" data-page="announcements" class="clickable">
+                            <i class="fas fa-bullhorn"></i>
+                            <span>ကြေငြာများ</span>
                             <div class="nav-indicator"></div>
                         </a>
                     </li>
@@ -345,6 +351,14 @@
                 <div class="quick-actions">
                     <h3>အမြန်လုပ်ဆောင်ချက်များ</h3>
                     <div class="action-grid">
+                        <div class="action-card clickable" data-page="announcements">
+                            <div class="action-icon">
+                                <i class="fas fa-bullhorn"></i>
+                                <div class="icon-glow"></div>
+                            </div>
+                            <div class="action-text">ကြေငြာများ</div>
+                            <div class="card-hover-effect"></div>
+                        </div>
                         <div class="action-card clickable" data-page="transfer">
                             <div class="action-icon">
                                 <i class="fas fa-paper-plane"></i>
@@ -369,14 +383,6 @@
                             <div class="action-text">KYC အတည်ပြုရန်</div>
                             <div class="card-hover-effect"></div>
                         </div>
-                        <div class="action-card clickable" data-page="settings">
-                            <div class="action-icon">
-                                <i class="fas fa-cog"></i>
-                                <div class="icon-glow"></div>
-                            </div>
-                            <div class="action-text">ဆက်တင်များ</div>
-                            <div class="card-hover-effect"></div>
-                        </div>
                     </div>
                 </div>
 
@@ -391,6 +397,21 @@
                             <i class="fas fa-history"></i>
                             <p>လုပ်ဆောင်ချက်မှတ်တမ်းမရှိသေးပါ</p>
                         </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Announcements Page -->
+            <section class="page" id="announcements-page">
+                <div class="page-header">
+                    <h2>ကြေငြာများ</h2>
+                    <p>နောက်ဆုံးကြေငြာများနှင့် လက်ဆောင်များ</p>
+                </div>
+
+                <div class="announcements-container" id="announcements-container">
+                    <div class="empty-state">
+                        <i class="fas fa-bullhorn"></i>
+                        <p>ကြေငြာများမရှိသေးပါ</p>
                     </div>
                 </div>
             </section>
@@ -640,7 +661,7 @@
                 <div class="settings-card">
                     <h3>အကြောင်း</h3>
                     <div class="about-info">
-                        <p>OPPER Payment v2.1</p> <!-- Version updated for new features -->
+                        <p>OPPER Payment v2.2</p>
                         <p>&copy; 2024 OPPER Payment. All rights reserved.</p>
                     </div>
                 </div>
@@ -671,6 +692,52 @@
         <div class="dropdown-item clickable" id="dropdown-logout">
             <i class="fas fa-sign-out-alt"></i>
             <span>အကောင့်ထွက်ရန်</span>
+        </div>
+    </div>
+
+    <!-- Gift Box Modal -->
+    <div class="modal" id="gift-box-modal">
+        <div class="modal-content gift-box-modal-content">
+            <div class="modal-header gift-box-header">
+                <h3 id="gift-box-title">လက်ဆောင်သေတ္တာ</h3>
+                <button class="modal-close clickable">&times;</button>
+            </div>
+            <div class="modal-body gift-box-body">
+                <div class="gift-box-animation">
+                    <div class="gift-box-icon">
+                        <i class="fas fa-gift"></i>
+                    </div>
+                    <div class="gift-sparkles">
+                        <div class="sparkle"></div>
+                        <div class="sparkle"></div>
+                        <div class="sparkle"></div>
+                        <div class="sparkle"></div>
+                    </div>
+                </div>
+                <div class="gift-box-info">
+                    <div class="gift-amount" id="gift-box-amount">0 Ks</div>
+                    <div class="gift-progress">
+                        <div class="progress-bar-container">
+                            <div class="progress-bar" id="gift-progress-bar"></div>
+                        </div>
+                        <div class="progress-text">
+                            <span id="gift-claimed-count">0</span> / <span id="gift-total-limit">0</span> ယူထားပြီး
+                        </div>
+                    </div>
+                    <div class="gift-leaderboard" id="gift-leaderboard">
+                        <!-- Leaderboard will be populated here -->
+                    </div>
+                </div>
+                <div class="auth-message error" id="gift-box-error"></div>
+                <div class="auth-message success" id="gift-box-success"></div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-outline modal-cancel clickable">ပိတ်မည်</button>
+                <button class="btn btn-primary clickable" id="claim-gift-btn">
+                    <i class="fas fa-gift"></i>
+                    <span>လက်ဆောင်ယူမည်</span>
+                </button>
+            </div>
         </div>
     </div>
 
@@ -848,7 +915,7 @@
     </div>
 
     <!-- Receipt Modal -->
-    <div class="modal receipt-modal-animated" id="receipt-modal"> <!-- Added receipt-modal-animated class -->
+    <div class="modal receipt-modal-animated" id="receipt-modal">
         <div class="modal-content receipt-modal-content">
             <div class="modal-header receipt-header">
                 <h3>ငွေလွှဲပြေစာ</h3>
@@ -914,8 +981,8 @@
     <!-- Audio Elements -->
     <audio id="transfer-sent-sound" src="https://github.com/Opper125/opper-payment/raw/main/transfer_sent.mp3" preload="auto"></audio>
     <audio id="transfer-received-sound" src="https://github.com/Opper125/opper-payment/raw/main/transfer_received.mp3" preload="auto"></audio>
-    <audio id="click-sound" src="https://github.com/Opper125/opper-payment/raw/main/click.mp3" preload="auto"></audio> <!-- Please ensure click.mp3 exists at this URL or replace it -->
-
+    <audio id="click-sound" src="https://github.com/Opper125/opper-payment/raw/main/click.mp3" preload="auto"></audio>
+    <audio id="gift-claim-sound" src="https://github.com/Opper125/opper-payment/raw/main/gift_claim.mp3" preload="auto"></audio>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="script.js"></script>
